# news-summary-backend

./: .env.example  .gitignore  Dockerfile  README.md  build.sh  config.py  database.py  main.py  models.py  pyproject.toml  services.py
scripts/: crawl_monthly.py
