[project]
name = "news-summary-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi[standard]>=0.136.3",
    "google-genai>=2.8.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.1",
    "supabase>=2.31.0",
    "uvicorn>=0.49.0",
]
